<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="promo">Promo</string>
    <string name="droploc_c">Drop Location ?</string>
    <string name="tap_to_edit">Tap to edit pickup &amp; drop</string>
    <string name="skip_fav">Skip Favourite Places</string>
    <string name="waiting_fare">Waiting fare per minute</string>
    <string name="your_card_expiry">Your card expired</string>
    <string name="enter_the_confirmation_phoneno">Please enter  valid mobile number</string>
    <string name="max_size">Maximum Size</string>
    <string name="enter_valid_comment">Enter valid comment</string>
    <string name="calldriver">Are you sure you want to call the driver?</string>
    <string name="promo_code_empty"> You did\'t apply any promo code</string>
    <string name="settings">Settings</string>
    <string name="pressBack">Please click BACK again to exit</string>
    <string name="mobileno">Mobile number</string>
    <string name="password_max_character">Password should be less than 32 characters</string>
    <string name="userphno">User Mobile Number</string>
    <string name="please_select_your_salutation">Please select your salutation</string>
    <string name="enter_the_valid_CVV">Please enter valid CVV</string>
    <string name="old_password_mismatch_with_password">Old password does not match</string>
    <string name="please_select_image_from_valid_path">Please select image from valid path(Gallery folder)</string>
    <string name="cardnumber">Card XXXX XXXX XXXX XXXX</string>
    <string name="card_number">Card Number</string>
    <string name="continue_package">Do you want continue with package services?</string>
    <string name="select_the_pickup_location">Please select the pick up location</string>
    <string name="select_the_drop_location">Please select the drop off location</string>
    <string name="book_taxi">Book Vehicle</string>
    <string name="bookedtaxi">You have booked the Vehicle.</string>
    <string name="book_now">Book Now</string>
    <string name="confirm_booking">Confirm later Jobs?</string>
    <string name="select_payment">Please select the payment type</string>
    <string name="location">Location</string>
    <string name="choose_place">Select type</string>
    <string name="delete_fdrivers">Do you want to delete the driver from Favourites?</string>
    <string name="back">Back</string>
    <string name="Trip_in_progress">Job in Progress</string>
    <string name="intransit">Job in Progress</string>
    <string name="Confirmation">Confirmation</string>
    <string name="no_thanks">No Thanks</string>
    <string name="driver_location">Driver Location</string>
    <string name="droplocation">Drop off Location(Optional)</string>
    <string name="canceled_from">Debit from :</string>
    <string name="canceled_amount">Cancelled amount :</string>
    <string name="defaultcard1">Default Card</string>
    <string name="zerofee">PAY VIA CARD AT FREE OF COST</string>
    <string name="confirmdelete">Are you sure you want to delete card?</string>
    <string name="delete_card">Delete card</string>
    <string name="edit">Edit</string>
    <string name="select_card_type">Please select Card Type</string>
    <string name="thank_you">Thank You</string>
    <string name="payment_complete">Job Completed</string>
    <string name="thanksforflag">Thank you for using Move. Make your next Job even more enjoyable.</string>
    <string name="ratedriver">Rate Your Driver</string>
    <string name="shareride">Share</string>
    <string name="edit_favourites">Edit Favourite</string>
    <string name="add_favourites">Add Favourite</string>
    <string name="register">Sign Up</string>
    <string name="agree_the_terms_and_condition">Please agree with the Terms and Condition</string>
    <string name="details">Details</string>
    <string name="fare_txt">Fare</string>
    <string name="nit_fare_to">to</string>
    <string name="menu">Menu</string>
    <string name="menu_gettaxi">Track my vehicle</string>
    <string name="menu_mybooking">My Jobs</string>
    <string name="menu_payment">Payment Options</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favourites">Favourite</string>
    <string name="menu_fare">Fare</string>
    <string name="menu_about">About</string>
    <string name="menu_about_us">About Us</string>
    <string name="book_a_taxi">Book a Vehicle</string>
    <string name="menu_logout">Log Out</string>
    <string name="place">Place</string>
    <string name="jobref">Job ID</string>
    <string name="t_book">Job Time</string>
    <string name="rateapp">Rate us in Play Store</string>
    <string name="likefb">Like us on Facebook</string>
    <string name="followtw">Follow us on Twitter</string>
    <string name="legal">Legal</string>
    <string name="termcond">Terms &amp; Conditions</string>
    <string name="policy">Privacy Policy</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="link">Links</string>
    <string name="menu_settings">Settings</string>
    <string name="request_taxi">Request vehicle</string>
    <string name="requestingtaxi">Requesting vehicle</string>
    <string name="landmark">Landmark</string>
    <string name="chpwd">Change Password</string>
    <string name="conpwd">Confirm Password</string>
    <string name="oldpwd">Old Password</string>
    <string name="newpwd">New Password</string>
    <string name="addcard">Add New Card</string>
    <string name="office">Office</string>
    <string name="airport">Airport</string>
    <string name="others">Others</string>
    <string name="reason_title">Reason for Cancellation</string>
    <string name="reson_cancel_title">Reason for Cancel</string>
    <string name="reason1">1.Cab delay</string>
    <string name="reason2">2.Driver did not respond</string>
    <string name="reason3">3.Wrong address shown</string>
    <string name="reason4">4.Changed the travel plan</string>
    <string name="reason5">5.Job placed in error</string>
    <string name="reason6">6.Others</string>
    <string name="book_again">Book Again</string>
    <string name="tripdetail">Job Details</string>
    <string name="canceling_taxi">Cancelling Request</string>
    <string name="fav_pick_location">Favourite Pick up Location</string>
    <string name="fav_drop_location">Favourite Drop off Location</string>
    <string name="enter_other_details">Please select your Favourite Type</string>
    <string name="personalcard">Personal Card</string>
    <string name="businesscard">Business Card</string>
    <string name="no_info">No information to update</string>
    <string-array name="sal_type">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Miss</item>
    </string-array>
    <string-array name="percent_type">
        <item>0%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>0%</item>
    </string-array>
    <string-array name="percent_type_u">
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
    </string-array>
    <string name="eta">ETA</string>
    <string name="hour_must_greater_than">Please make sure that the job is scheduled after at least an hour from now.</string>
    <string name="on_going">On Going</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions are not granted.</string>
    <string name="success">Success</string>
    <string name="about_sub_title">You can depend on us</string>
    <string name="check_internet_connection">Check your Internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="referal">Referral/Promo code</string>
    <string name="comment">Comments</string>
    <string name="headtitle_below">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="fblink">facebook.com/Move</string>
    <string name="twlink">twitter.com/Move</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="picktime">Pickup Time:</string>
    <string name="pass_app_link">https://play.google.com/store/apps/details?id=com.snape</string>
    <string name="reg_creditcard">Pay by Credit Card</string>
    <string name="reg_cash">Pay by Cash</string>
    <string name="reg_cardnumber">Card Number</string>
    <string name="reg_month">MM</string>
    <string name="reg_year">YYYY</string>
    <string name="reg_cc">CVV</string>
    <string name="reg_cardname">Name on the card (optional)</string>
    <string name="reg_entercardname">Please enter your card name</string>
    <string name="reg_savecard">Save Card Details</string>
    <string name="reg_terms">Terms and Conditions</string>
    <string name="reg_expmonth">Please select expiry month</string>
    <string name="reg_expyear">Please select expiry year</string>
    <string name="reg_enter_referral">Please enter your Referral/Promo code</string>
    <string name="verify_valid_code">Aw,Snap! Can we try again?</string>
    <string name="addmoney_paypal">Paypal</string>
    <string name="addmoney_braintree">Braintree</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_card">Credit Card</string>
    <string name="pls_complete_the_payment">Please complete the payment</string>
    <string name="cash_card">Cash/Card</string>
    <string name="apply">Apply</string>
    <string name="Language">Language</string>
    <string name="split_with_friends">Split Fare with Friends</string>
    <string name="total_aprox_fare">Total Approximate Fare: </string>
    <string name="ur_approx_fare">Approximate Fare:</string>
    <string name="enter_pickup">Enter pickup Location</string>
    <string name="enter_promo_code">Enter the Promo Code</string>
    <string name="type_your_comment">Type your comments</string>
    <string name="contact_number">Contact number</string>
    <string name="z_split_fare_with">Split Fare with</string>
    <string name="z_split_charged">Your job will be charged</string>
    <string name="fblogin">Sign in with Facebook</string>
    <string name="cancel_fare">Cancellation Fare</string>
    <string name="estimate_fare">Estimated Fare</string>
    <string name="travelling_time">Travelling Time :</string>
    <string name="estimated_fare">Estimated Fare :</string>
    <string name="e_receipt">E-Receipt</string>
    <string name="mybookings">My Jobs</string>
    <string name="add_card">Add Card</string>
    <string name="edit_card">Edit Card</string>
    <string name="nocard">You don\'t have credit card details</string>
    <string name="ontxt">ON</string>
    <string name="offtxt">OFF</string>
    <string name="enter_det">Enter below details to complete the sign up process</string>
    <string name="name_txt">Name</string>
    <string name="email_txt">Email address</string>
    <string name="sign_agree">By signing up with us you agree to our </string>
    <string name="password">Password</string>
    <string name="submit"> Submit </string>
    <string name="save">Save</string>
    <string name="my_fleet">My Fleet</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_information">Enter Your Vehicle Information</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="select_model">Select Model</string>
    <string name="vehicle_owner_name">Vehicle Owner Name</string>
    <string name="vehicle_manufacturer">Vehicle Manufacturer</string>
    <string name="upload_vehicle_img">Upload Vehicle Image</string>
    <string name="img_format">Image should be in following format, jpg or png</string>
    <string name="clear">Clear</string>
    <string name="draw_signature">Draw Signature</string>
    <string name="complete">Complete</string>
    <string name="force_complete">Force Complete</string>
</resources>