<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/slide_lay"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tool_bar"
            android:background="@color/button_accept"
            android:padding="10dp">

            <TextView
                android:id="@+id/slideImg"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_12"
                android:background="@drawable/ic_back_white"
                android:textSize="2sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/headerTxt"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/my_fleet"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:layout_below="@+id/slide_lay"
            android:foreground="@color/white"
            android:visibility="visible"></FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_vehicle"
                android:textColor="@color/block"
                android:textSize="26dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/vehicle_information"
                android:textColor="@color/sub_heading_light" />

            <EditText
                android:id="@+id/vehicle_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/transparent"
                android:hint="@string/vehicle_number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/hintcolor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/vehicle_number"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@color/text_filed" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16">

                <TextView

                    android:id="@+id/select_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_model"
                    android:singleLine="true"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="@dimen/dp_18" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/select_model"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@color/separator_line" />

                <ImageView
                    android:id="@+id/drop_down_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp_12"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/down_arrow"
                    android:textSize="@dimen/dp_18" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16">

                <TextView

                    android:id="@+id/vehicle_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_owner_name"
                    android:singleLine="true"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="@dimen/dp_18" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/vehicle_owner_name"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@color/separator_line" />


            </RelativeLayout>

            <EditText
                android:id="@+id/vehicle_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/transparent"
                android:hint="@string/vehicle_manufacturer"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/hintcolor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/vehicle_manufacturer"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@color/separator_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16">

                <TextView
                    android:id="@+id/upload_vehicle_img"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/upload_vehicle_img"
                    android:marqueeRepeatLimit="1"
                    android:singleLine="true"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="@dimen/dp_18" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/upload_vehicle_img"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@color/separator_line" />

                <TextView
                    android:id="@+id/upload_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="5dp"
                    android:text="Upload"
                    android:textSize="@dimen/dp_18" />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/img_format" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/dp_12"
        android:background="@drawable/button_rect"
        android:fontFamily="@font/normalfont"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />


</RelativeLayout>