<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_contain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:visibility="visible">
        <!--  -->

        <ImageView
            android:id="@+id/back_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:src="@drawable/back" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_lay"
        android:layout_margin="@dimen/dp_12">

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/boldfont"
            android:paddingLeft="4dp"
            android:text="@string/register"

            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/enter_Det"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup"
            android:paddingLeft="4dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/sub_heading"
            android:text="@string/enter_det"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_txt"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_Det"
            android:hint="@string/name_txt">

            <EditText
                android:paddingLeft="4dp"
                android:background="@color/transparent"
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/opensans_regular"
                android:maxLength="30"
                android:imeOptions="actionDone"
                android:textColorHint="@color/sub_heading"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/edt_name"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="6dp"
                android:background="@color/text_filed" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_txt"
            android:hint="@string/password"
            app:passwordToggleDrawable="@drawable/ic_show_password"
            app:passwordToggleEnabled="true">

            <EditText
                android:paddingLeft="4dp"
                android:background="@color/transparent"
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/opensans_regular"
                android:inputType="textPassword"
                android:maxLength="32"
                android:textColorHint="@color/sub_heading"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/edt_pass"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="6dp"
                android:background="@color/text_filed" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass_txt"
            android:hint="@string/email_txt">

            <EditText
                android:paddingLeft="4dp"
                android:background="@color/transparent"
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/opensans_regular"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textColorHint="@color/sub_heading"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/edt_email"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="6dp"
                android:background="@color/text_filed" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_txt">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/referal_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:paddingLeft="4dp"
                    android:background="@color/transparent"
                    android:id="@+id/edt_referal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/referal"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:textColorHint="@color/sub_heading"
                    android:maxLength="@integer/promoMaxLength"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/edt_referal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="6dp"
                    android:background="@color/text_filed" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/referralinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="17dp"
                android:src="@drawable/referral_info"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/txt_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_agree"
                android:textColorLink="@color/sub_heading"
                android:textSize="16sp" />

            <Button
                android:id="@+id/signup_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_agree"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_rect"
                android:fontFamily="@font/boldfont"
                android:text="@string/submit"
                android:textSize="@dimen/sp_16"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>